--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Muhammad Hasan </title>
+	<title> Jumar Alam </title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
@@ -100,7 +100,7 @@
 		</div>
 		<div>
 			
-			<h1> <strong> Md Hasan</strong></h1>
+			<h1> <strong> Jumar Alam</strong></h1>
 				<p> <em> Machine Learning and Deep Learning Enthusiast | Love Python and Good Coffee :( </em></p>
 
 				
@@ -218,7 +218,7 @@
 	<section style="margin-left: 20px; padding: 5px; padding-bottom: 10px; margin-bottom: 3px;"  class="bg-primary">
 		<div class="row text-center">
 			
-				<h6> Created By Md Hasan</h6>
+				<h6> Inspired By Md Hasan</h6>
 			
 		</div>
 	</section>
