--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 			<div class="text-center" style="padding-top: 50px;">
 				
-				<img src="img/me.jpg" class="img-circle" style="max-height: 160px; max-width: 160px;">
+				<img src="img/mee.jpg" class="img-circle" style="max-height: 160px; max-width: 160px;">
 				
 			</div>
 		</div>
