--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					<li> <p> <b class="text-justify"> Libraries:  </b> Numpy, Pandas, Keras </p> 
 					</li>
 					
-					<li> <p> <b class="text-justify"> Operation System: </b> Ununtu, deepin, Elementary OS, Windows </p> 
+					<li> <p> <b class="text-justify"> Operation System: </b> Ubuntu, deepin, Elementary OS, Windows </p> 
 					</li>
 
 
