--- a/index.html
+++ b/index.html
@@ -121,6 +121,23 @@
 		<hr style="width: 100%; color: black; height: 1px; background-color:gray;" />
 		
 	</section>
+	
+	<section style="margin-left: 50px;">
+		<div class="row">
+			<div class="col-xs-12 col-sm-6 col-md-8">
+				<h2><p class="font-italic text-primary"> Work Experience </p></h2>
+				
+				<ul> 
+					<li> <p> <b class="text-justify"> Teaching Assistant [2019-present] </b> </p> </li>
+					<li style="margin-left: 20px;">
+						<p class="text-justify font-weight-bold">   <strong> <em> <b> Department of Electrical and Computer Engineering, North South University </em></strong> </b></p>
+					</li>
+
+				<ul>
+			</div>
+		</div>
+	</section>
+
 
 	
 	
@@ -159,9 +176,11 @@
 				<h2 class="text-justify text-primary"> Technical Skills </h2>
 				
 				<ul> 
-					<li> <p> <b class="text-justify"> Programming Skills:  </b> C++, C, Java, Python, C# </p>
+					<li> <p> <b class="text-justify"> Programming Skills:  </b> C++, C, Java, Python, R</p>
 					 </li>
 					<li> <p> <b class="text-justify"> Development Skills:  </b> GUI Application, WordPress </p> 
+					</li>
+					<li> <p> <b class="text-justify"> Tools:  </b> LaTeX, Octave, Microsoft Office </p> 
 					</li>
 
 					<li> <p> <b class="text-justify"> Libraries:  </b> Numpy, Pandas, Keras </p> 
@@ -195,6 +214,13 @@
 			</div>
 		</div>
 	</section>
+		
+	<section style="margin-left: 50px;">
+		<div class="row text-center">
+			Click <a href ="Jumar_Alam_CV.pdf">here.</a> if you are highly interested to see my CV.
+		</div>
+	</section>
+	
 
 	<section style="margin-left: 20px; padding: 5px; padding-bottom: 10px; margin-bottom: 3px;"  class="bg-primary">
 		<div class="row text-center">
