--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 		
 	<section style="margin-left: 50px;">
 		<div class="row text-center">
-			Click <a href ="https://drive.google.com/open?id=1nWa1ZXt2psqGyQ2KXjH3tIHnXjwwwRa5">here</a> if you are highly interested to see my CV.<b><b>
+			Click <a href ="https://github.com/JumarAlam/JumarAlam.github.io/blob/master/Jumar_Alam_CV.pdf">here</a> if you are highly interested to see my CV.<br><br>
 		</div>
 	</section>
 	
