--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 		
 	<section style="margin-left: 50px;">
 		<div class="row text-center">
-			Click <a href ="https://JumarAlam.github.io/Jumar_Alam_CV.pdf">here</a> if you are highly interested to see my CV.<br><br>
+			<h2 class="text-justify text-primary"> Just in case you want to wander my  <a href ="https://JumarAlam.github.io/Jumar_Alam_CV.pdf">Curriculum Vitae. </a> </h2><br><br>
 		</div>
 	</section>
 	
