--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 		
 	<section style="margin-left: 50px;">
 		<div class="row text-center">
-			<h4> Just in case you want to wander my  <a href ="https://JumarAlam.github.io/Jumar_Alam_CV.pdf">Curriculum Vitae. </a> </h4><br><br>
+			<h4> Just in case you want to have a glance on my  <a href ="https://JumarAlam.github.io/Jumar_Alam_CV.pdf">Curriculum Vitae</a> for professional purpose.</h4><br><br>
 		</div>
 	</section>
 	
