--- a/index.html
+++ b/index.html
@@ -128,9 +128,17 @@
 				<h2><p class="font-italic text-primary"> Work Experience </p></h2>
 				
 				<ul> 
-					<li> <p> <b class="text-justify"> Teaching Assistant [2019-present] </b> </p> </li>
+					<li> <p> <b class="text-justify"> Teaching Assistant [January, 2019 - present] </b> </p> </li>
 					<li style="margin-left: 20px;">
 						<p class="text-justify font-weight-bold">   <strong> <em> <b> Department of Electrical and Computer Engineering, North South University </em></strong> </b></p>
+					</li>
+
+				<ul>
+				
+				<ul> 
+					<li> <p> <b class="text-justify"> Intern [October, 2019 - present] </b> </p> </li>
+					<li style="margin-left: 20px;">
+						<p class="text-justify font-weight-bold">   <strong> <em> <b> Pathao LTD. </em></strong> </b></p>
 					</li>
 
 				<ul>
