--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     <h2 class="mb-5">Additional Resource</h2>
                     <div class="subheading mb-3">Thank you so much for visiting my portfolio website.</div>
                     <p>Just in case you want to have a glance on my <a href="https://JumarAlam.github.io/Jumar_Alam_CV.pdf">Curriculum Vitae</a> for professional purpose.</p>
-                    <p>Click <a href="https://JumarAlam.github.io/OLD/index.html/">here</a> to see my previous dummy portfolio.</p>
+                    <!--<p>Click <a href="https://JumarAlam.github.io/OLD/index.html/">here</a> to see my previous dummy portfolio.</p>-->
 
 
                 </div>
