--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HSX7B8HHTW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HSX7B8HHTW');
+</script>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
