--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="subheading mb-3">North South University</div>
                             <p>Department of Electrical and Computer Engineering.</p>
                             <ul>
-                              <li>Teaching Database Management System (MySQL) lab Course to more than 120 students.</li>
+                              <li>Teaching Database Management System (MySQL) lab Course to more than 200 students.</li>
                               <li>Teaching Programming Language I (C Programming) lab Course to more than 80 students.</li>
                               <li>Conducting exam, evaluating and assessing course related term projects.</li>
                               <li>Counseling students during office hours.</li>
@@ -211,7 +211,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Back-end: Django, CodeIgniter, MySQL
+                            Back-end: Django, CodeIgniter, MySQL, Oracle
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
