--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Journal</h3>
                             <div class="subheading mb-3"></div>
-                            <ol><li>Hasan, M.; Fuhad, K. M. F.; Khan, A. M. S.; Khan, S. I. A.; <b>Alam, M. J.</b>; Tuba, J. F.; Mohammed, N.; Momen, S. and Rahman. F. “Chittron V2: Bangla Image Captioning with Attention and Pretrained Decoder”, Applied Sciences (Under Review).</li></ol>
+                            <ol><li>Hasan, M.; <b>Alam, M. J.</b>; Fuhad, K. M. F.; Khan, A. M. S.; Khan, S. I. A.; Tuba, J. F.; Mohammed, N.; Momen, S. and Rahman. F. “Chittron V2: Bangla Image Captioning with Attention and Pretrained Decoder”, Applied Sciences (Under Review).</li></ol>
                         </div>
                     </div>
                 </div>
