update lab officer experience

--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
                             <div class="subheading mb-3">North South University</div>
                             <p>Department of Electrical and Computer Engineering.</p>
                             <ul>
-                              <li>Teaching Database Management System (MySQL) lab Course to more than 200 students.</li>
-                              <li>Teaching Programming Language I (C Programming) lab Course to more than 80 students.</li>
-                              <li>Conducting exam, evaluating and assessing course related term projects.</li>
-                              <li>Counseling students during office hours.</li>
+                              <li>Taught Computer Architecture and Organization lab course to more than 120 students.</li>
+                              <li>Taught Digital Logic Design lab course to more than 200 students.</li>
+                              <li>Taught Database Management System (MySQL) lab course to more than 200 students.</li>
+                              <li>Taught Programming Language I (C Programming) lab course to more than 80 students.</li>
+                              <li>Conducted exam, evaluating and assessing course related term projects.</li>
+                              <li>Counseled students during office hours.</li>
                             </ul>
 
                         </div>
