--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                         <span class="text-primary">Alam</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Dhaka, Bangladesh ·
-                        <a href="mailto:jumar.alam@northsouth.edu">jumar.alam@northsouth.edu</a>
+                        Kelowna, British Columbia, Canada ·
+                        <a href="mailto:jumarlm@student.ubc.ca">jumarlm@student.ubc.ca</a>
                     </div>
-                    <p class="lead mb-5">Currently working as a Part-time Lab Officer at the Department of Electrical and Computer Engineering, North South University, Dhaka. Former Undergraduate Teaching Assistant at North South University and Intern at Pathao LTD. Super nerd who loves Linux and enjoys to do analytical works. Deeply into Study, Research and Teaching. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.</p>
+                    <p class="lead mb-5">Currently pursuing a Master of Science in Computer Science at The University of British Columbia and working as a Graduate Teaching and Research Assistant there. Former Part-time Lab Officer and Undergraduate Teaching Assistant at the Department of Electrical and Computer Engineering, North South University, Dhaka, and Intern at Pathao LTD. A super nerd who loves Linux and enjoys to do analytical works. Deeply into Study, Research, and Teaching. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/JumarAlam"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.linkedin.com/in/jumaralam/"><i class="fab fa-linkedin-in"></i></a>
@@ -75,6 +75,41 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Graduate Research Assistant</h3>
+                            <div class="subheading mb-3">University of British Columbia</div>
+                            <p>Department of Computer Science, Irving K. Barber Faculty of Science. </p>
+                          <p> Supervisor: Dr. Fatemeh Hendijani Fard </p>
+                            <ul>
+                              Research topics include:
+                              <li>Unsupervised Machine Learning</li>
+                              <li>Transfer Learning.</li>
+                              <li>Natural Language Processing.</li>
+                              <li>Software Engineering.</li>
+                              <li>Data Visualization.</li>
+                            </ul>
+
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2020 - December 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Graduate Research Assistant</h3>
+                            <div class="subheading mb-3">University of British Columbia</div>
+                            <p>Department of Electrical and Computer Engineering.</p>
+                            <ul>
+                              <li>Taught Computer Architecture and Organization lab course to more than 120 students.</li>
+                              <li>Taught Digital Logic Design lab course to more than 200 students.</li>
+                              <li>Taught Database Management System (MySQL) lab course to more than 200 students.</li>
+                              <li>Taught Programming Language I (C Programming) lab course to more than 80 students.</li>
+                              <li>Conducted exam, evaluating and assessing course related term projects.</li>
+                              <li>Counseled students during office hours.</li>
+                            </ul>
+
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2020 - December 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Part-Time Lab Officer</h3>
                             <div class="subheading mb-3">North South University</div>
                             <p>Department of Electrical and Computer Engineering.</p>
@@ -88,7 +123,7 @@
                             </ul>
 
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2020 - December 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
