--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Graduate Research Assistant</h3>
                             <div class="subheading mb-3">University of British Columbia</div>
-                            <p>Department of Computer Science, Irving K. Barber Faculty of Science. </p>
-                          <p> Supervisor: Dr. Fatemeh Hendijani Fard </p>
+                            <p> Department of Computer Science, Irving K. Barber Faculty of Science. </p>
+                            <p> Supervisor: Dr. Fatemeh Hendijani Fard </p>
                             <ul>
                               Research topics include:
                               <li>Unsupervised Machine Learning</li>
@@ -89,24 +89,22 @@
                             </ul>
 
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2020 - December 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Graduate Research Assistant</h3>
+                            <h3 class="mb-0">Graduate Teaching Assistant</h3>
                             <div class="subheading mb-3">University of British Columbia</div>
-                            <p>Department of Electrical and Computer Engineering.</p>
+                            <p> Department of Computer Science, Irving K. Barber Faculty of Science. </p>
+                            <p> Supervisors: Dr. Scott Fazackerley and Dr. Abdallah Mohamed</p>
                             <ul>
-                              <li>Taught Computer Architecture and Organization lab course to more than 120 students.</li>
-                              <li>Taught Digital Logic Design lab course to more than 200 students.</li>
-                              <li>Taught Database Management System (MySQL) lab course to more than 200 students.</li>
-                              <li>Taught Programming Language I (C Programming) lab course to more than 80 students.</li>
-                              <li>Conducted exam, evaluating and assessing course related term projects.</li>
-                              <li>Counseled students during office hours.</li>
+                              Courses include:
+                              <li>COSC 301 - Introduction to Data Analytics</li>
+                              <li>COSC 211 - Machine Architecture</li>
                             </ul>
 
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2020 - December 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -159,6 +157,15 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">University of British Columbia, Canada</h3>
+                            <div class="subheading mb-3">Master of Science</div>
+                            <div>Computer Science</div>
+                            <!--<p>CGPA: 3.82 (With Summa Cum Laude Distinction Award)</p> >
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">North South University</h3>
