--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
                             <div class="subheading mb-3">University of British Columbia</div>
                             <p> Department of Computer Science, Irving K. Barber Faculty of Science. </p>
                             <p> Supervisor: Dr. Fatemeh Hendijani Fard </p>
+                          
                             <ul>
-                              Research topics include:
+                            <p> Research topics include: </p>
                               <li>Unsupervised Machine Learning</li>
                               <li>Transfer Learning.</li>
                               <li>Natural Language Processing.</li>
@@ -98,7 +99,7 @@
                             <p> Department of Computer Science, Irving K. Barber Faculty of Science. </p>
                             <p> Supervisors: Dr. Scott Fazackerley and Dr. Abdallah Mohamed</p>
                             <ul>
-                              Courses include:
+                            <p>Courses include:</p>
                               <li>COSC 301 - Introduction to Data Analytics</li>
                               <li>COSC 211 - Machine Architecture</li>
                             </ul>
