--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <h3 class="mb-0">University of British Columbia, Canada</h3>
                             <div class="subheading mb-3">Master of Science</div>
                             <div>Computer Science</div>
-                            <!--<p>CGPA: 3.82 (With Summa Cum Laude Distinction Award)</p> >
+                            <!--<p>CGPA: 3.82 (With Summa Cum Laude Distinction Award)</p> -->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
                     </div>
