--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of British Columbia, Canada</h3>
                             <div class="subheading mb-3">Master of Science</div>
-                            <div>Computer Science</div>
+                            <div>Computer Science (Thesis-based Program)</div>
+                          <p> Supervised by Dr. Fatemeh Hendijani Fard </p>
                             <!--<p>CGPA: 3.82 (With Summa Cum Laude Distinction Award)</p> -->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
