--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#research">Research</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publication">Publications</a></li>
+                    <!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publication">Publications</a></li>-->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
@@ -220,7 +220,7 @@
             </section>
             <hr class="m-0" />
             <!-- Publication-->
-            <section class="resume-section" id="publication">
+            <!--<section class="resume-section" id="publication">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -232,7 +232,7 @@
                     </div>
                 </div>
             </section>
-            <hr class="m-0" />
+            <hr class="m-0" />-->
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
