--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a part-time lab instructor, I enjoy most of my time being outdoors. I love travelling, hanging out with friends and explore and roam around the city.</p>
+                    <p>Apart from my study and research work, I enjoy most of my time being outdoors. I love travelling, hanging out with friends and explore and roam around the city.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and thriller genre movies and television shows. I love doing analytical and problem solving task, and learn new things. I spend a large amount of my free time exploring the latest technology advancements around the world.</p>
                 </div>
             </section>
