--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         Kelowna, British Columbia, Canada ·
                         <a href="mailto:jumarlm@student.ubc.ca">jumarlm@student.ubc.ca</a>
                     </div>
-                    <p class="lead mb-5">Currently pursuing a Master of Science in Computer Science at The University of British Columbia and working as a Graduate Teaching and Research Assistant there. Former Part-time Lab Officer and Undergraduate Teaching Assistant at the Department of Electrical and Computer Engineering, North South University, Dhaka, and Intern at Pathao LTD. A super nerd who loves Linux and enjoys to do analytical works. Deeply into Study, Research, and Teaching. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.</p>
+                    <p class="lead mb-5">Currently pursuing my Master of Science degree in Computer Science at The University of British Columbia and working as a Graduate Teaching and Research Assistant there. Former Part-time Lab Officer and Undergraduate Teaching Assistant at the Department of Electrical and Computer Engineering, North South University, Dhaka, and Intern at Pathao LTD. A super nerd who loves Linux and enjoys to do analytical works. Deeply into Study, Research, and Teaching. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/JumarAlam"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.linkedin.com/in/jumaralam/"><i class="fab fa-linkedin-in"></i></a>
