--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                         Kelowna, British Columbia, Canada ·
                         <a href="mailto:jumarlm@student.ubc.ca">jumarlm@student.ubc.ca</a>
                     </div>
-                    <p class="lead mb-5">Currently pursuing my Master of Science degree in Computer Science at The University of British Columbia and working as a Graduate Teaching and Research Assistant there. Former Part-time Lab Officer and Undergraduate Teaching Assistant at the Department of Electrical and Computer Engineering, North South University, Dhaka, and Intern at Pathao LTD. A super nerd who loves Linux and enjoys to do analytical works. Deeply into Study, Research, and Teaching. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.</p>
+                    <!--<p class="lead mb-5">Currently pursuing my Master of Science degree in Computer Science at The University of British Columbia and working as a Graduate Teaching and Research Assistant there. Former Part-time Lab Officer and Undergraduate Teaching Assistant at the Department of Electrical and Computer Engineering, North South University, Dhaka, and Intern at Pathao LTD. A super nerd who loves Linux and enjoys to do analytical works. Deeply into Study, Research, and Teaching. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.</p>-->
+                    <p class="lead mb-5">Pursuing a Master of Science in Computer Science and working as a Graduate Teaching Assistant and Research Assistant, contributing to academia. Previously, served as a Lab Instructor and Undergraduate Teaching Assistant and worked as a Research Intern. Linux enthusiast with strong basics, skills, logical and analytical ability, and exploration potential. Fluent in Procedural, Object-Oriented, and Declarative programming languages and dedicated to devising effective problem-solving methods in the fields of Software Engineering, Machine Learning, and Data Science. Proud team player and have a strong ability to blend in multi-disciplinary and vibrant environments.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/JumarAlam"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.linkedin.com/in/jumaralam/"><i class="fab fa-linkedin-in"></i></a>
@@ -82,11 +83,10 @@
                           
                             <p> Research topics include: </p>
                             <ul>
-                              <li>Unsupervised Machine Learning</li>
-                              <li>Transfer Learning.</li>
+
+                              <li>Code Representation Learning.</li>
                               <li>Natural Language Processing.</li>
-                              <li>Software Engineering.</li>
-                              <li>Data Visualization.</li>
+                              <li>Code Clone Detection and Bug Propagation</li>
                             </ul>
 
                         </div>
@@ -97,11 +97,12 @@
                             <h3 class="mb-0">Graduate Teaching Assistant</h3>
                             <div class="subheading mb-3">University of British Columbia</div>
                             <p> Department of Computer Science, Irving K. Barber Faculty of Science. </p>
-                            <p> Supervisors: Dr. Scott Fazackerley and Dr. Abdallah Mohamed</p>
+                            <p> Supervisors: Dr. Abdallah Mohamed, Dr. Scott Fazackerley and Dr. Firas Moosvi</p>
                             <p>Courses include:</p>
                             <ul>
                               <li>COSC 301 - Introduction to Data Analytics</li>
                               <li>COSC 211 - Machine Architecture</li>
+                              <li>COSC 111 - Computer Programming I (Java)</li>
                             </ul>
 
                         </div>
@@ -109,7 +110,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Part-Time Lab Officer</h3>
+                            <h3 class="mb-0">Part-Time Lab Instructor</h3>
                             <div class="subheading mb-3">North South University</div>
                             <p>Department of Electrical and Computer Engineering.</p>
                             <ul>
@@ -241,27 +242,27 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Programming: Python, C, C++, R, Java, Latex, Octave
+                            Programming: Python, C, C++, R, Java, Octave.
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Frameworks: Keras, Tensorflow, PyTorch, Pandas, Matplotlib, OpenCV, Scikit learn
+                            Frameworks: Keras, Tensorflow, PyTorch, Pandas, Matplotlib, OpenCV, Scikit learn.
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            OS: Linux, Windows
+                            OS: Linux, Windows, MacOS.
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            DevOps: Git, Slack
+                            DevOps: Git, Slack, Trello, MS Power BI, MS Office, SAS, LaTex.
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Back-end: Django, CodeIgniter, MySQL, Oracle
+                            Back-end: Django, MySQL, PostgreSQL, Oracle, Amazon RDS, Redshift, MongoDB, CosmosDB, Neo4j, InfluxDB.
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Front-end: HTML5, CSS3, Bootstrap
+                            Front-end: HTML5, CSS3, Bootstrap.
                         </li>
                     </ul>
                     <br>
@@ -269,7 +270,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Artificial Intelligence, Machine Learning, Deep Learing.
+                            Artificial Intelligence, Machine Learning, Deep Learing, Data Engineering.
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -329,7 +330,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Additional Resource</h2>
                     <div class="subheading mb-3">Thank you so much for visiting my portfolio website.</div>
-                    <p>Just in case you want to have a glance on my <a href="https://JumarAlam.github.io/Jumar_Alam_CV.pdf">Curriculum Vitae</a> for professional purpose.</p>
+                    <p>Just in case you want to have a glance on my <a href="https://JumarAlam.github.io/Md_Jumar_Alam_Resume.pdf">Curriculum Vitae</a> for professional purpose.</p>
                     <!--<p>Click <a href="https://JumarAlam.github.io/OLD/index.html/">here</a> to see my previous dummy portfolio.</p>-->
 
 
