--- a/index.html
+++ b/index.html
@@ -461,6 +461,14 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <b>UBC Graduate Research Scholarships,</b>  In Recognition of Excellent Academic Performances, 2022-23.
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <b>University Graduate Fellowship ,</b>  In Recognition of Excellent Academic Performances, 2022.
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             <b>Summa Cum Laude Distinction Award,</b> For Academic Excellence in Undergraduate Level, 2020.
                         </li>
                         <li>
